[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/GameOverMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/PopLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/montreal/Montreal-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/JuiceButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="GameOverMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Shade" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.160784, 0.176471, 0.627451 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 64
custom_constants/margin_top = 32
custom_constants/margin_left = 64
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 64.0
margin_top = 32.0
margin_right = 612.0
margin_bottom = 336.0
size_flags_vertical = 0
custom_constants/separation = 32

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 548.0
margin_bottom = 14.0
text = "Game Over"
align = 1
valign = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 548.0
margin_bottom = 148.0
rect_min_size = Vector2( 256, 64 )
custom_constants/separation = -8
alignment = 1

[node name="FinalScoreText" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 548.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "Final Score"
uppercase = true
pop_on_first_change = true

[node name="FinalScoreValue" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 23.0
margin_right = 548.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 3 )
uppercase = true
pop_on_value_change = false

[node name="ButtonPlayAgain" parent="MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 180.0
margin_right = 548.0
margin_bottom = 200.0
text = "Play Again"

[node name="ButtonQuitToMenu" parent="MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 232.0
margin_right = 548.0
margin_bottom = 252.0
text = "Quit to Main Menu"

[node name="ButtonQuitToDesktop" parent="MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 284.0
margin_right = 548.0
margin_bottom = 304.0
text = "Quit to Desktop"

[node name="Tween" type="Tween" parent="."]

[connection signal="updated_score_text" from="." to="MarginContainer/VBoxContainer/VBoxContainer/FinalScoreText" method="_on_value_source_updated"]
[connection signal="updated_score_value" from="." to="MarginContainer/VBoxContainer/VBoxContainer/FinalScoreValue" method="_on_value_source_updated"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonPlayAgain" to="." method="_on_button_play_again_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonQuitToMenu" to="." method="_on_button_quit_to_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonQuitToDesktop" to="." method="_on_button_quit_to_desktop_pressed"]
